# strelka

./: '  .gitignore  Cargo.toml  LICENSE.md  README.md  flake.nix  index.html  strelka.kdl  strelka.kdl2
action/: Cargo.toml
action/src/: document.rs  file.rs  lib.rs  message.rs  pane.rs  theme.rs
command/: Cargo.toml
command/src/: lib.rs  theme_load.rs
config/: Cargo.toml
config/src/: app.rs  config.rs  gui.rs  lib.rs  workdir.rs
content/: a.md  sample.md
core/: Cargo.toml
core/src/: action.rs  actions.rs  buffer.rs  color.rs  command.rs  data_tree.rs  document.rs  hotkey.rs  lib.rs  message.rs  node.rs  notification.rs  pane.rs  state.rs  theme.rs  value.rs
core/src/iced/: button.rs  container.rs  mod.rs  text.rs
gui/: Cargo.toml
gui/src/: config.rs  main.rs  util.rs
plugin/: Cargo.toml
plugin/src/: host.rs  lib.rs  plugins.rs
src/: camera.rs  canvas.rs  icons.rs  main.rs  notification.rs  stroke.rs  styles.rs  util.rs
src/canvas/: mod.rs  program.rs  scene.rs  widget.rs
src/editor/: mod.rs
src/plugin/: host.rs  mod.rs  plugins.rs  plugins_list.rs
src/scene/: canvas.rs  editor.rs  mod.rs  object.rs  program.rs  renderer.rs  scene.rs
src/theme/: mod.rs
src/theming/: catalog.rs  color.rs  metadata.rs  mod.rs  theme.rs
src/theming/styles/: button.rs  context_menu.rs  editor.rs  file_explorer.rs  generic.rs  list.rs  list_item.rs  mod.rs  notification.rs  notification_list.rs  tab.rs  tab_bar.rs
src/widget/: button.rs  containers.rs  cosmic.rs  mod.rs
src/widget/canvas/: mod.rs  program.rs  widget.rs
src/widget/editor/: mod.rs
src/widget/file_explorer/: mod.rs
src/widget/list/: list.rs  list_item.rs  mod.rs
src/widget/notificaton/: mod.rs
src/widget/pane/: file_explorer.rs  mod.rs  text_editor.rs
src/widget/tabs/: mod.rs  tab.rs  tab_bar.rs
state/: Cargo.toml  LICENSE
state/src/: action.rs  brocker.rs  lib.rs
state/src/actors/: document.rs  file.rs  mod.rs  pane.rs  plugin_host.rs  theme.rs
strelka-gui/: Cargo.toml
strelka-gui/src/: application.rs  main.rs  message.rs
strelka_api/: Cargo.toml
strelka_api/src/: context.rs  core.rs  lib.rs  message.rs  value.rs  window.rs
strelka_core/: Cargo.toml
strelka_core/src/: gui_service.rs  lib.rs
strelka_gui/: Cargo.toml
strelka_gui/src/: application.rs  document_view.rs  header_bar.rs  main.rs  message.rs  screen.rs
strelka_gui/src/screen/: buffer_list.rs  buffer_view.rs  file_explorer.rs  mod.rs  screen_manager.rs
strelka_gui/src/widget/: file_manager.rs  header_bar.rs  mod.rs
strelka_plugin/: Cargo.toml
strelka_plugin/src/: lib.rs
themes/: light.toml
themes/dark/: metadata.toml  theme.kdl  theme.ron  theme.toml
themes/light/: metadata.toml  theme.kdl  theme.ron  theme.toml
theming/: Cargo.toml
theming/src/: border.rs  catalog.rs  color.rs  font.rs  index.rs  lib.rs  margin.rs  metadata.rs  padding.rs  stylesheet.rs  theme.rs
theming/src/iced/: button.rs  container.rs  mod.rs  scrollable.rs  svg.rs  text.rs  text_editor.rs
theming/src/styles/: button.rs  context_menu.rs  editor.rs  file_explorer.rs  generic.rs  list.rs  list_item.rs  notification.rs  tab.rs  tab_bar.rs
widget/: Cargo.toml
widget/src/: buffer.rs  button.rs  container.rs  containers.rs  editor.rs  file_explorer.rs  icon.rs  lib.rs  list.rs  notificaton.rs  plugins_list.rs  tab.rs  util.rs
widget/src/editor/: mod.rs
widget/src/file_explorer/: mod.rs
widget/src/list/: list.rs  list_item.rs  mod.rs
widget/src/notificaton/: mod.rs
widget/src/pane/: config.rs  file_explorer.rs  mod.rs  new_document.rs  pane_stack.rs  text_editor.rs
widget/src/tabs/: tab.rs  tab_bar.rs
