[package]
name = "strelka"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["strelka_core", "strelka_gui"]

[[bin]]
name = "strelka"
path = "strelka_gui/src/main.rs"

[profile.release]
opt-level = 2
lto = false
codegen-units = 16
panic = "unwind"
strip = false

[profile.production]
inherits = "release"
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
# Additional size optimizations
overflow-checks = false
debug = false


[workspace.dependencies]
crossbeam-channel = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1.47", features = ["rt-multi-thread", "macros"] }
smol_str = "0.2"