[workspace]
members = [ "strelka_api","strelka_core", "strelka_gui", "strelka_plugin"]
resolver = "3"

[profile.release]
opt-level = 2
lto = false
codegen-units = 16
panic = "unwind"
strip = false

[profile.production]
inherits = "release"
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
overflow-checks = false
debug = false


[workspace.dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1.47", features = ["rt-multi-thread", "macros", "fs", "sync"] }
smol_str = "0.2"
dashmap = "6.1"
ropey = "1.6"
async-trait = "0.1.89"
