[package]
name = "config"
version = "0.1.0"
edition = "2021"

[dependencies]
core = { path = "../core" }
theming = { path = "../theming" }
dirs = "^5"
toml = { workspace = true, optional = true }
serde = { workspace = true, optional = true }

[features]
default = ["serde"]
serde = ["dep:serde", "dep:toml"]
