[package]
name = "strelka_core"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"
authors = ["Nikita Shumov"]

[dependencies]
async-std = { workspace = true }
iced_core = { version = "0.13.0", optional = true }
serde = { workspace = true, optional = true }
smol_str = { version = "^0.3", features = ["serde"] }
palette = "0.7.6"
nom = "7.1.3"

[features]
serde = ["dep:serde"]
iced = ["dep:iced_core"]
default = ["serde"]
