[package]
name = "strelka_core"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"
authors = ["Nikita Shumov"]

[dependencies]
async-std = { workspace = true }
serde = { workspace = true, optional = true }
smol_str = { version = "^0.3", features = ["serde"] }
palette = "0.7.6"
nom = "7.1.3"
async-trait = { workspace = true }
anyhow = { workspace = true }
futures = { version = "0.3" }
iced_core = { version = "0.13.0", optional = true }
iced_widget = { version = "0.13.0", optional = true }
iced_winit = { version = "0.13.0", optional = true }

[features]
serde = ["dep:serde"]
iced = ["dep:iced_core", "dep:iced_widget", "dep:iced_winit"]
default = ["serde"]
