[package]
name = "strelka_core"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"
authors = ["Nikita Shumov"]

[dependencies]
smol = { workspace = true }
serde = { workspace = true, optional = true }
smol_str = { version = "^0.3", features = ["serde"] }
palette = "0.7.6"
nom = "7.1.3"
async-trait = { workspace = true }
anyhow = { workspace = true }
futures = { version = "0.3" }
ron = { workspace = true }
iced_core = { workspace = true, optional = true }
iced_widget = { workspace = true, optional = true }

[features]
serde = ["dep:serde"]
iced = ["dep:iced_core", "dep:iced_widget"]
default = ["serde"]
