[package]
name = "gui"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"
authors = ["Nikita Shumov"]

[[bin]]
name = "strelka"
path = "src/main.rs"

[dependencies]
rfd = "^0.15"
core = { path = "../core" }
theming = { path = "../theming" }
config = { path = "../config" }
widget = { path = "../widget" }
iced = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
async-std = { workspace = true }
