[package]
name = "gui"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"
authors = ["Nikita Shumov"]

[[bin]]
name = "strelka"
path = "src/main.rs"

[dependencies]
rfd = "^0.15"
strelka_core = { path = "../core" }
theming = { path = "../theming" }
widget = { path = "../widget" }
command = { path = "../command" }
iced = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
smol = { workspace = true }
serde = { workspace = true }
ron = { workspace = true }

