[package]
name = "state"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"
authors = ["Nikita Shumov"]

[dependencies]
rfd = "^0.15"
crossbeam = { workspace = true }
tokio = { workspace = true }
core = { path = "../core" }
config = { path = "../config" }
theming = { path = "../theming" }
log = { workspace = true }
iced = { workspace = true }
