[package]
name = "strelka_gui"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
tokio-stream = { workspace = true }
iced = { git = "https://github.com/iced-rs/iced.git", features = ["tokio", "sipper"] }
tracing = { workspace = true }

strelka_core = { path = "../strelka_core" }
strelka_api = { path = "../strelka_api" }
strelka_plugin = { path = "../strelka_plugin" }
