[package]
name = "theming"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"
authors = ["Nikita Shumov"]

[dependencies]
strelka_core = { path = "../core", features = ["iced", "serde"] }
iced = { workspace = true, optional = true }
smol = { workspace = true }
kdl = { version = "^6.3" }
log = { workspace = true }

[features]
default = ["iced"]
iced = ["dep:iced"]
