[package]
name = "widget"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"
authors = ["Nikita Shumov"]

[dependencies]
core = { path = "../core" }
theming = { path = "../theming" }
state = { path = "../state" }
plugin = { path = "../plugin" }
lazy_static = "^1.5"
tokio = { version = "^1.40", features = ["fs"]}
iced = { git = "https://github.com/iced-rs/iced.git", features = ["advanced", "canvas", "svg"], branch = "master" }
iced_aw = { git = "https://github.com/iced-rs/iced_aw.git", branch = "main" }
log = "^0.4"
