[package]
name = "widget"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"
authors = ["Nikita Shumov"]

[dependencies]
core = { path = "../core" }
theming = { path = "../theming", features = ["tokio"] }
state = { path = "../state" }
plugin = { path = "../plugin" }
lazy_static = { workspace = true }
tokio = { workspace = true }
iced = { workspace = true }
iced_aw = { workspace = true }
log = { workspace = true }
