[package]
name = "widget"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"
authors = ["Nikita Shumov"]

[dependencies]
strelka_core = { path = "../core" }
theming = { path = "../theming" }
lazy_static = { workspace = true }
iced = { workspace = true }
iced_aw = { workspace = true }
log = { workspace = true }
